<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences">

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_activity_settings"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSetting"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/landtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/langtext" />

        <Spinner
            android:id="@+id/spinnerlangs"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/applybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/applybtn"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelbtn" />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/logout"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:text="version 1" />
</RelativeLayout>